adcionando páginas da cartilha

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Questão de Ética</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
-    <link rel="stylesheet" href="animate.css">
+    <link rel="stylesheet" href="assets/animate.css">
     <link rel="stylesheet" href="assets/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css" integrity="sha384-b6lVK+yci+bfDmaY1u0zE8YYJt0TZxLEAFyYSLHId4xoVvsrQu3INevFKo+Xir8e" crossorigin="anonymous">
@@ -25,8 +25,8 @@
         </div>
 
         <div class="center botoes">
-            <a href="pagina01.html">
-            <button type="button" href="pagina01.html" class="btn btn-outline-success">Próximo<i class="bi bi-chevron-right"></i></button></a>
+            <a href="pagina02.html">
+            <button type="button" class="btn btn-outline-success">Próximo<i class="bi bi-chevron-right"></i></button></a>
         </div>
     </main>
 
