--- a/pagina03.html
+++ b/pagina03.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Questão de Ética - página01</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
-    <link rel="stylesheet" href="animate.css">
+    <link rel="stylesheet" href="assets/animate.css">
     <link rel="stylesheet" href="assets/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -14,19 +14,23 @@
         integrity="sha384-b6lVK+yci+bfDmaY1u0zE8YYJt0TZxLEAFyYSLHId4xoVvsrQu3INevFKo+Xir8e" crossorigin="anonymous">
 </head>
 
-<body>
+<body class="pagina02">
+
     <main class="main">
-        <div class="center">
-            <h2 class="subtitle">ESCOLA DE GESTÃO PÚBLICA DO ESTADO DO CEARÁ - EGPCE</h2>
-        </div>
+
+        <h1 class="margin_title">
+            <p class="title_white"><strong class="title_white"> Cartilha de Ética <br>
+                    para Servidores EGPCE: </strong><br>
+                Construindo Relações Positivas!
+            </p>
+        </h1>
 
         <div class="center botoes">
-            <a href="index.html">
-                <button type="button" class="btn btn-outline-success"><i class="bi bi-chevron-left"></i>Voltar</button>
+            <a href="pagina02.html">
+                <button type="button" class="btn btn-outline-light"><i class="bi bi-chevron-left"></i>Voltar</button>
             </a>
-            <a href="pagina01.html">
-                <button type="button" class="btn btn-outline-success">Próximo<i
-                        class="bi bi-chevron-right"></i></button>
+            <a href="pagina04.html">
+                <button type="button" class="btn btn-outline-light">Próximo<i class="bi bi-chevron-right"></i></button>
             </a>
         </div>
     </main>
