adcionei imagens e e tentei mudar os botoes

--- a/pagina06.html
+++ b/pagina06.html
@@ -35,6 +35,7 @@
             <div>
                 <img src="" alt="">
                 <!-- <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script><lottie-player src="https://lottie.host/c5c926dc-6e41-4dfa-a223-0f0a4f472f36/ozbdsMrpB4.json" background="##FFFFFF" speed="1" style="width: 1000px; height: 1000px" loop autoplay direction="1" mode="normal"></lottie-player> -->
+                <!-- <video src="animations/piscando.mp4" width="620" height="620" type="video/mp4" preload loop autoplay></video> -->
             </div>
             <div>
                 <div class="square2 darkorange wow fadeInRight">
