ajeitei os botoes

--- a/pagina02.html
+++ b/pagina02.html
@@ -12,6 +12,9 @@
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css"
         integrity="sha384-b6lVK+yci+bfDmaY1u0zE8YYJt0TZxLEAFyYSLHId4xoVvsrQu3INevFKo+Xir8e" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -90,17 +93,19 @@
                         </li>
                         <li class="wow fadeIn" data-wow-delay="0.4s">
                             <p>Aldiane Lima <br>
-                            <strong> Design</strong></p>
+                                <strong> Design</strong>
+                            </p>
                         </li>
                         <li class="wow fadeIn" data-wow-delay="0.5s">
                             <p>Ana Lívia Alves <br>
                                 Lorena Maia <br>
-                            <strong> Seleção/revisão de Textos</strong> </p>
+                                <strong> Seleção/revisão de Textos</strong>
+                            </p>
                         </li>
                         <li class="wow fadeIn" data-wow-delay="0.6s">
                             <p>Natalia Portela <br>
                                 <strong>Eventos </strong>
-                                </p>
+                            </p>
                         </li>
                     </ul>
                     <div class="wow fadeIn" data-wow-delay="0.7s">
@@ -113,11 +118,14 @@
 
         <div class="center botoes">
             <a href="index.html">
-                <button type="button" class="btn btn-outline-success"><i class="bi bi-chevron-left"></i>Voltar</button>
+                <button type="button" class="button">
+                    <i class="fa-solid fa-chevron-left icone"></i>Anterior
+                </button>
             </a>
             <a href="pagina03.html">
-                <button type="button" class="btn btn-outline-success">Próximo<i
-                        class="bi bi-chevron-right"></i></button>
+                <button type="button" class="button">
+                    Próximo <i class="fa-solid fa-chevron-right icone"></i>
+                </button>
             </a>
         </div>
     </main>
