--- a/pagina03.html
+++ b/pagina03.html
@@ -12,13 +12,16 @@
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css"
         integrity="sha384-b6lVK+yci+bfDmaY1u0zE8YYJt0TZxLEAFyYSLHId4xoVvsrQu3INevFKo+Xir8e" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body class="pagina02">
 
     <main class="main">
 
-        <h1 class="margin_title">
+        <h1 class="margin_title wow zoomIn" data-wow-duration="1">
             <p class="title_white"><strong class="title_white"> Cartilha de Ética <br>
                     para Servidores EGPCE: </strong><br>
                 Construindo Relações Positivas!
@@ -27,10 +30,14 @@
 
         <div class="center botoes">
             <a href="pagina02.html">
-                <button type="button" class="btn btn-outline-light"><i class="bi bi-chevron-left"></i>Voltar</button>
+                <button type="button" class="button_white">
+                    <i class="fa-solid fa-chevron-left icone_white"></i>Anterior
+                </button>
             </a>
             <a href="pagina04.html">
-                <button type="button" class="btn btn-outline-light">Próximo<i class="bi bi-chevron-right"></i></button>
+                <button type="button" class="button_white">
+                    Próximo <i class="fa-solid fa-chevron-right icone icone_white"></i>
+                </button>
             </a>
         </div>
     </main>
