--- a/pagina04.html
+++ b/pagina04.html
@@ -12,6 +12,9 @@
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css"
         integrity="sha384-b6lVK+yci+bfDmaY1u0zE8YYJt0TZxLEAFyYSLHId4xoVvsrQu3INevFKo+Xir8e" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body class="pagina02">
@@ -19,25 +22,29 @@
     <main class="main">
 
         <h1 class="margin_title">
-            <p class="title_white"><strong class="title_white">Objetivo</strong><br>
+            <p class="title_white"><strong class="title_white wow zoomIn" data-wow-duration="1">Objetivo</strong><br>
             </p>
         </h1>
 
-        <p class="paragrafo">O Código de Ética e Disciplina da Escola de Gestão
+        <p class="paragrafo wow slideInLeft" data-wow-delay="1">O Código de Ética e Disciplina da Escola de Gestão
             Pública do Estado do Ceará tem por objetivo indicar os
             princípios, valores e normas que devem orientar os seus
             servidores na conquista dos seus direitos e obrigações,
             de modo a regular as relações entre a administração
             pública estadual e a sociedade.</p>
 
-        <div class="center botoes">
-            <a href="pagina03.html">
-                <button type="button" class="btn btn-outline-light"><i class="bi bi-chevron-left"></i>Voltar</button>
-            </a>
-            <a href="pagina05.html">
-                <button type="button" class="btn btn-outline-light">Próximo<i class="bi bi-chevron-right"></i></button>
-            </a>
-        </div>
+            <div class="center botoes">
+                <a href="pagina03.html">
+                    <button type="button" class="button_white">
+                        <i class="fa-solid fa-chevron-left icone_white"></i>Anterior
+                    </button>
+                </a>
+                <a href="pagina05.html">
+                    <button type="button" class="button_white">
+                        Próximo <i class="fa-solid fa-chevron-right icone icone_white"></i>
+                    </button>
+                </a>
+            </div>
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
