--- a/pagina05.html
+++ b/pagina05.html
@@ -13,6 +13,9 @@
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css"
         integrity="sha384-b6lVK+yci+bfDmaY1u0zE8YYJt0TZxLEAFyYSLHId4xoVvsrQu3INevFKo+Xir8e" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -25,7 +28,7 @@
         <div class="container text-center">
             <div class="row">
                 <div class="col">
-                    <h1 class="title05">Princípios e Valores
+                    <h1 class="title05 wow zoomIn">Princípios e Valores
                         Éticos Fundamentais</h1>
                 </div>
                 <div class="col">
@@ -65,11 +68,14 @@
 
         <div class="center botoes">
             <a href="pagina04.html">
-                <button type="button" class="btn btn-outline-success"><i class="bi bi-chevron-left"></i>Voltar</button>
+                <button type="button" class="button">
+                    <i class="fa-solid fa-chevron-left icone"></i>Anterior
+                </button>
             </a>
             <a href="pagina06.html">
-                <button type="button" class="btn btn-outline-success">Próximo<i
-                        class="bi bi-chevron-right"></i></button>
+                <button type="button" class="button">
+                    Próximo <i class="fa-solid fa-chevron-right icone"></i>
+                </button>
             </a>
         </div>
     </main>
