adcionando paginas e comentando css

--- a/pagina11.html
+++ b/pagina11.html
@@ -44,40 +44,41 @@
         <div class="wrapper">
             <div>
                 <div class="square green wow fadeInLeft">
-                    <h3 class="title">Respeito às Pessoas:
+                    <h3 class="title">Sustentabilidade:
                     </h3>
-                    <p>Trate todos com cortesia, empatia e
-                        dignidade, independentemente de
-                        sua posição ou cargo.</p>
+                    <p>Adote práticas sustentáveis no
+                        ambiente de trabalho e incentive o
+                        uso consciente dos recursos.</p>
                 </div>
                 <div class="square darkorange wow fadeInLeft" data-wow-delay="0.3s">
-                    <h3 class="title">Transparência:
+                    <h3 class="title">Denúncia de Irregularidades: 
                     </h3>
-                    <p>Exerça suas funções de maneira
-                        aberta e transparente, garantindo que
-                        suas ações sejam mantidas mesmo
-                        ao olhar atento das pessoas</p>
+                    <p>Seja proativo na denúncia de condutas
+                        antiéticas ou irregularidades,
+                        contribuindo para a preservação dos
+                        valores da instituição.</p>
                 </div>
                 <div class="square orange wow fadeInLeft" data-wow-delay="0.6s">
-                    <h3 class="title">Integridade Pessoal:
+                    <h3 class="title">Xô preconceito:
                     </h3>
-                    <p>Aja com honestidade, mantendo
-                        princípios éticos e morais elevados
-                        em todas as situações.</p>
+                    <p>Relacionados à origem, raça, religião,
+                        classe social, sexo, deficiência física
+                        ou intelectual ou ainda quaisquer
+                        outras formas de discriminação.</p>
                 </div>
             </div>
             <div class="img_pessoa">
-                <img class="wow fadeInUp" src="imgs/Group 12.png" width="auto" height="600" alt="">
+                <img class="wow fadeInUp" src="imgs/Group 8.png" width="auto" height="600" alt="">
             </div>
         </div>
 
         <div class="center">
-            <a href="pagina04.html">
+            <a href="pagina10.html">
                 <button type="button" class="button">
                     <i class="fa-solid fa-chevron-left icone"></i>Anterior
                 </button>
             </a>
-            <a href="pagina06.html">
+            <a href="pagina12.html">
                 <button type="button" class="button">
                     Próximo <i class="fa-solid fa-chevron-right icone"></i>
                 </button>
