--- a/pagina03.html
+++ b/pagina03.html
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Questão de Ética - página01</title>
+    <title>Questão de Ética</title>
+    <!-- CDN WOW JS  -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
+    <!-- STYLE ANIMATE -->
     <link rel="stylesheet" href="assets/animate.css">
+    <!-- CSS -->
     <link rel="stylesheet" href="assets/style.css">
+    <!-- CDN BOOTSTRAP  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <!-- ICONES BOOTSTRAP  -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css"
         integrity="sha384-b6lVK+yci+bfDmaY1u0zE8YYJt0TZxLEAFyYSLHId4xoVvsrQu3INevFKo+Xir8e" crossorigin="anonymous">
+    <!-- CDN FONT AWESOME  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -28,17 +34,38 @@
             </p>
         </h1>
 
-        <div class="center botoes">
-            <a href="pagina02.html">
-                <button type="button" class="button_white">
-                    <i class="fa-solid fa-chevron-left icone_white"></i>Anterior
-                </button>
-            </a>
-            <a href="pagina04.html">
-                <button type="button" class="button_white">
-                    Próximo <i class="fa-solid fa-chevron-right icone icone_white"></i>
-                </button>
-            </a>
+        <div class="container text-center">
+            <div class="row">
+                <div class="col">
+                    <img class="background_img" src="imgs/Group 10.png" width="auto" height="500" alt="">
+                </div>
+                <div class="col">
+                    <p class="p_white wow fadeInLeft">Olá,<br>
+                        Começa aqui a nossa
+                        jornada pela ética no
+                        ambiente de trabalho.
+                        Vamos explorar
+                        juntos como manter
+                        relações respeitosas e
+                        responsáveis. Vamos
+                        começar!</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="button_fixed">
+            <div class="botoes">
+                <a href="pagina02.html">
+                    <button type="button" class="button_white ">
+                        <i class="fa-solid fa-chevron-left icone_white"></i>Anterior
+                    </button>
+                </a>
+                <a href="pagina04.html">
+                    <button type="button" class="button_white ">
+                        Próximo <i class="fa-solid fa-chevron-right icone icone_white"></i>
+                    </button>
+                </a>
+            </div>
         </div>
     </main>
 
