--- a/pagina04.html
+++ b/pagina04.html
@@ -1,18 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Questão de Ética - página01</title>
+    <title>Questão de Ética</title>
+    <!-- CDN WOW JS  -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
+    <!-- STYLE ANIMATE -->
     <link rel="stylesheet" href="assets/animate.css">
+    <!-- CSS -->
     <link rel="stylesheet" href="assets/style.css">
+    <!-- CDN BOOTSTRAP  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <!-- ICONES BOOTSTRAP  -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css"
         integrity="sha384-b6lVK+yci+bfDmaY1u0zE8YYJt0TZxLEAFyYSLHId4xoVvsrQu3INevFKo+Xir8e" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    <!-- CDN FONT AWESOME  -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
@@ -22,18 +28,34 @@
     <main class="main">
 
         <h1 class="margin_title">
-            <p class="title_white"><strong class="title_white wow zoomIn" data-wow-duration="1">Objetivo</strong><br>
-            </p>
+            <div class="container text-center">
+                <div class="row wow zoomIn">
+                    <div class="col">
+                        <p class="title_white objetivos"><strong class="title_white"
+                                data-wow-duration="1">Objetivo</strong><br>
+                        </p>
+                    </div>
+                    <div class="col">
+                        <img class="logo" src="imgs/logoEGP1.png" alt="">
+                    </div>
+
+                </div>
+            </div>
         </h1>
 
-        <p class="paragrafo wow slideInLeft" data-wow-delay="1">O Código de Ética e Disciplina da Escola de Gestão
-            Pública do Estado do Ceará tem por objetivo indicar os
-            princípios, valores e normas que devem orientar os seus
-            servidores na conquista dos seus direitos e obrigações,
-            de modo a regular as relações entre a administração
-            pública estadual e a sociedade.</p>
+        <div>
+            <p class="paragrafo wow slideInLeft" data-wow-delay="1">O Código de Ética e Disciplina da Escola de Gestão
+                Pública do Estado do Ceará tem por objetivo indicar os
+                princípios, valores e normas que devem orientar os seus
+                servidores na conquista dos seus direitos e obrigações,
+                de modo a regular as relações entre a administração
+                pública estadual e a sociedade.</p>
+        </div>
+        <div>
+            <img class="background_img" width="28%" height="auto" src="imgs/Group 11.png" alt="">
 
-            <div class="center botoes">
+        </div>
+            <div class="button_fixed">
                 <a href="pagina03.html">
                     <button type="button" class="button_white">
                         <i class="fa-solid fa-chevron-left icone_white"></i>Anterior
