--- a/pagina06.html
+++ b/pagina06.html
@@ -5,17 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Questão de Ética</title>
+    <!-- CDN WOW JS  -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
+    <!-- STYLE ANIMATE -->
     <link rel="stylesheet" href="assets/animate.css">
+    <!-- CSS -->
     <link rel="stylesheet" href="assets/style.css">
-
-
-
+    <!-- CDN BOOTSTRAP  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <!-- ICONES BOOTSTRAP  -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css"
         integrity="sha384-b6lVK+yci+bfDmaY1u0zE8YYJt0TZxLEAFyYSLHId4xoVvsrQu3INevFKo+Xir8e" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    <!-- CDN FONT AWESOME  -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
@@ -24,21 +27,19 @@
 
     <main>
         <div class="container text-center">
-            <div class="row">
+            <div class="row wow zoomIn">
                 <div class="col">
-                    <h1 class="title05 wow zoomIn">Princípios e Valores
+                    <h1 class="title_principios ">Princípios e Valores
                         Éticos Fundamentais</h1>
                 </div>
                 <div class="col">
-                    <img class="logo_egp img05" src="imgs/logoEGP2.png" alt="">
+                    <img class="logo_egp img_principios" src="imgs/logoEGP2.png" alt="">
                 </div>
             </div>
         </div>
         <div class="wrapper">
-            <div>
-                <img src="" alt="">
-                <!-- <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script><lottie-player src="https://lottie.host/c5c926dc-6e41-4dfa-a223-0f0a4f472f36/ozbdsMrpB4.json" background="##FFFFFF" speed="1" style="width: 1000px; height: 1000px" loop autoplay direction="1" mode="normal"></lottie-player> -->
-                <!-- <video src="animations/piscando.mp4" width="620" height="620" type="video/mp4" preload loop autoplay></video> -->
+            <div class="img_pessoa">
+                <img class="wow fadeInUp" src="imgs/Group 13.png" width="auto" height="600" alt="">
             </div>
             <div>
                 <div class="square2 darkorange wow fadeInRight">
@@ -68,7 +69,7 @@
 
         </div>
 
-        <div class="center botoes">
+        <div class="center">
             <a href="pagina05.html">
                 <button type="button" class="button">
                     <i class="fa-solid fa-chevron-left icone"></i>Anterior
