--- a/pagina07.html
+++ b/pagina07.html
@@ -44,40 +44,39 @@
         <div class="wrapper">
             <div>
                 <div class="square green wow fadeInLeft">
-                    <h3 class="title">Respeito às Pessoas:
+                    <h3 class="title">Ambiente de Trabalho Respeitoso:
                     </h3>
-                    <p>Trate todos com cortesia, empatia e
-                        dignidade, independentemente de
-                        sua posição ou cargo.</p>
+                    <p>Contribua para criar um ambiente de
+                        trabalho inclusivo, onde o respeito e a
+                        colaboração prevaleçam.</p>
                 </div>
                 <div class="square darkorange wow fadeInLeft" data-wow-delay="0.3s">
-                    <h3 class="title">Transparência:
+                    <h3 class="title">Desenvolvimento Contínuo:
                     </h3>
-                    <p>Exerça suas funções de maneira
-                        aberta e transparente, garantindo que
-                        suas ações sejam mantidas mesmo
-                        ao olhar atento das pessoas</p>
+                    <p>Busque sempre oportunidades de
+                        aprendizado e aprimoramento para
+                        melhor desempenhar suas funções.</p>
                 </div>
                 <div class="square orange wow fadeInLeft" data-wow-delay="0.6s">
-                    <h3 class="title">Integridade Pessoal:
+                    <h3 class="title">Sigilo e Confidencialidade:
                     </h3>
-                    <p>Aja com honestidade, mantendo
-                        princípios éticos e morais elevados
-                        em todas as situações.</p>
+                    <p>Proteja informações sensíveis,
+                        evitando sua divulgação
+                        não autorizada.</p>
                 </div>
             </div>
             <div class="img_pessoa">
-                <img class="wow fadeInUp" src="imgs/Group 12.png" width="auto" height="600" alt="">
+                <img class="wow fadeInUp" src="imgs/Group 14.png" width="auto" height="600" alt="">
             </div>
         </div>
 
         <div class="center">
-            <a href="pagina04.html">
+            <a href="pagina06.html">
                 <button type="button" class="button">
                     <i class="fa-solid fa-chevron-left icone"></i>Anterior
                 </button>
             </a>
-            <a href="pagina06.html">
+            <a href="pagina08.html">
                 <button type="button" class="button">
                     Próximo <i class="fa-solid fa-chevron-right icone"></i>
                 </button>
