--- a/pagina09.html
+++ b/pagina09.html
@@ -44,40 +44,39 @@
         <div class="wrapper">
             <div>
                 <div class="square green wow fadeInLeft">
-                    <h3 class="title">Respeito às Pessoas:
+                    <h3 class="title">Prestação de Serviço Qualitativo:
                     </h3>
-                    <p>Trate todos com cortesia, empatia e
-                        dignidade, independentemente de
-                        sua posição ou cargo.</p>
+                    <p>Comprometa-se com a excelência em
+                        suas atividades, visando a contribuir
+                        para a missão da instituição.</p>
                 </div>
                 <div class="square darkorange wow fadeInLeft" data-wow-delay="0.3s">
-                    <h3 class="title">Transparência:
+                    <h3 class="title">Liderança Exemplar:
                     </h3>
-                    <p>Exerça suas funções de maneira
-                        aberta e transparente, garantindo que
-                        suas ações sejam mantidas mesmo
-                        ao olhar atento das pessoas</p>
+                    <p>Se ocupa posição de liderança, seja
+                        um exemplo de conduta ética e
+                        profissional para sua equipe.</p>
                 </div>
                 <div class="square orange wow fadeInLeft" data-wow-delay="0.6s">
-                    <h3 class="title">Integridade Pessoal:
+                    <h3 class="title">Respeito à Diversidade:
                     </h3>
-                    <p>Aja com honestidade, mantendo
-                        princípios éticos e morais elevados
-                        em todas as situações.</p>
+                    <p>Valorize as diferenças de opiniões,
+                        culturas e características individuais,
+                        promovendo a diversidade.</p>
                 </div>
             </div>
             <div class="img_pessoa">
-                <img class="wow fadeInUp" src="imgs/Group 12.png" width="auto" height="600" alt="">
+                <img class="wow fadeInUp" src="imgs/Group 16.png" width="auto" height="600" alt="">
             </div>
         </div>
 
         <div class="center">
-            <a href="pagina04.html">
+            <a href="pagina08.html">
                 <button type="button" class="button">
                     <i class="fa-solid fa-chevron-left icone"></i>Anterior
                 </button>
             </a>
-            <a href="pagina06.html">
+            <a href="pagina10.html">
                 <button type="button" class="button">
                     Próximo <i class="fa-solid fa-chevron-right icone"></i>
                 </button>
