--- a/pagina10.html
+++ b/pagina10.html
@@ -24,11 +24,7 @@
 </head>
 
 <body>
-    <!-- SCRIPT DO WOW JS  -->
-    <script>
-        new WOW().init();
-    </script>
-    <!-- COMEÇO DO CONTEÚDO -->
+
     <main>
         <div class="container text-center">
             <div class="row wow zoomIn">
@@ -42,42 +38,46 @@
             </div>
         </div>
         <div class="wrapper">
-            <div>
-                <div class="square green wow fadeInLeft">
-                    <h3 class="title">Respeito às Pessoas:
-                    </h3>
-                    <p>Trate todos com cortesia, empatia e
-                        dignidade, independentemente de
-                        sua posição ou cargo.</p>
-                </div>
-                <div class="square darkorange wow fadeInLeft" data-wow-delay="0.3s">
-                    <h3 class="title">Transparência:
-                    </h3>
-                    <p>Exerça suas funções de maneira
-                        aberta e transparente, garantindo que
-                        suas ações sejam mantidas mesmo
-                        ao olhar atento das pessoas</p>
-                </div>
-                <div class="square orange wow fadeInLeft" data-wow-delay="0.6s">
-                    <h3 class="title">Integridade Pessoal:
-                    </h3>
-                    <p>Aja com honestidade, mantendo
-                        princípios éticos e morais elevados
-                        em todas as situações.</p>
-                </div>
-            </div>
             <div class="img_pessoa">
-                <img class="wow fadeInUp" src="imgs/Group 12.png" width="auto" height="600" alt="">
+                <img class="wow fadeInUp" src="imgs/Group 9.png" width="auto" height="600" alt="">
             </div>
+            <div>
+                <div class="square2 darkorange wow fadeInRight">
+                    <h3 class="title">Cuidado com a Imagem
+                        da Instituição:
+
+                    </h3>
+                    <p>Adote comportamentos que
+                        preservem a reputação da Escola de
+                        Gestão Pública.</p>
+                </div>
+                <div class="square2 green wow fadeInRight" data-wow-delay="0.3s">
+                    <h3 class="title">Comunicação Clara e Precisa: 
+
+                    </h3>
+                    <p>Evite informações falsas ou
+                        enganosas, comunicando-se
+                        de forma clara e precisa.</p>
+                </div>
+                <div class="square2 blue wow fadeInRight" data-wow-delay="0.6s">
+                    <h3 class="title">Colaboração:
+                    </h3>
+                    <p>Incentive a colaboração e a troca
+                        de conhecimento entre os colegas,
+                        promovendo um ambiente de
+                        cooperação.</p>
+                </div>
+            </div>
+
         </div>
 
         <div class="center">
-            <a href="pagina04.html">
+            <a href="pagina09.html">
                 <button type="button" class="button">
                     <i class="fa-solid fa-chevron-left icone"></i>Anterior
                 </button>
             </a>
-            <a href="pagina06.html">
+            <a href="pagina11.html">
                 <button type="button" class="button">
                     Próximo <i class="fa-solid fa-chevron-right icone"></i>
                 </button>
@@ -85,14 +85,13 @@
         </div>
     </main>
 
-    <!-- FIM DO CONTEUDO -->
 
-    <!-- SCRIPT DO BOOTSTRAP  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
-        </script>
-
-
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
+    <script>
+        new WOW().init();
+    </script>
 </body>
 
 </html>
