resta apenas a ultima pagina e comentar o css

--- a/pagina12.html
+++ b/pagina12.html
@@ -23,49 +23,42 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
-<body class="background_green">
+<body>
 
     <main class="main">
 
-        <h1 class="margin_title">
-            <div class="container text-center">
-                <div class="row wow zoomIn">
-                    <div class="col">
-                        <p class="title_white objetivos"><strong class="title_white"
-                                data-wow-duration="1">Objetivo</strong><br>
-                        </p>
-                    </div>
-                    <div class="col">
-                        <img class="logo" src="imgs/logoEGP1.png" alt="">
-                    </div>
-
+        <div class="container text-center">
+            <div class="row wow zoomIn">
+                <div class="col">
+                    <h1 class="title_principios ">Princípios e Valores
+                        Éticos Fundamentais</h1>
+                </div>
+                <div class="col">
+                    <img class="logo_egp img_principios" src="imgs/logoEGP2.png" alt="">
                 </div>
             </div>
-        </h1>
-
-        <div>
-            <p class="paragrafo wow slideInLeft" data-wow-delay="1">O Código de Ética e Disciplina da Escola de Gestão
-                Pública do Estado do Ceará tem por objetivo indicar os
-                princípios, valores e normas que devem orientar os seus
-                servidores na conquista dos seus direitos e obrigações,
-                de modo a regular as relações entre a administração
-                pública estadual e a sociedade.</p>
         </div>
-        <div>
-            <img class="background_img" width="28%" height="auto" src="imgs/Group 11.png" alt="">
 
-        </div>
+        <p class="paragrafo12 wow fadeInLeft">
+            <strong class="text_green">EGP lugar de todos: </strong> é proibida qualquer forma
+            de assédio moral, assédio sexual, bullying,
+            discriminação, preconceito de qualquer natureza
+            ou conduta ofensiva que não siga os princípops
+            de respeito, dignidade e igualdade no ambiente
+            de trabalho.
+        </p>
+
+        <img class="wow fadeInUp" src="imgs/Group 7.png" width="100%" height="auto" alt="">
     </main>
-
     <div class="center">
-        <a href="pagina03.html">
-            <button type="button" class="button_white">
-                <i class="fa-solid fa-chevron-left icone_white"></i>Anterior
+        <a href="pagina11.html">
+            <button type="button" class="button">
+                <i class="fa-solid fa-chevron-left icone"></i>Anterior
             </button>
         </a>
-        <a href="pagina05.html">
-            <button type="button" class="button_white">
-                Próximo <i class="fa-solid fa-chevron-right icone icone_white"></i>
+        <a href="pagina13.html">
+            <button type="button" class="button">
+                Próximo <i class="fa-solid fa-chevron-right icone"></i>
             </button>
         </a>
     </div>
