--- a/pagina16.html
+++ b/pagina16.html
@@ -23,49 +23,51 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
-<body class="background_green">
+<body>
 
     <main class="main">
 
-        <h1 class="margin_title">
-            <div class="container text-center">
-                <div class="row wow zoomIn">
-                    <div class="col">
-                        <p class="title_white objetivos"><strong class="title_white"
-                                data-wow-duration="1">Objetivo</strong><br>
-                        </p>
-                    </div>
-                    <div class="col">
-                        <img class="logo" src="imgs/logoEGP1.png" alt="">
-                    </div>
-
+        <div class="container text-center">
+            <div class="row wow zoomIn">
+                <div class="col">
+                    <h1 class="title_orange">NA EGPCE ESTÁ LIBERADO</h1>
+                </div>
+                <div class="col">
+                    <img class="logo_egp img_principios" src="imgs/logoEGP2.png" alt="">
                 </div>
             </div>
-        </h1>
+        </div>
 
         <div>
-            <p class="paragrafo wow slideInLeft" data-wow-delay="1">O Código de Ética e Disciplina da Escola de Gestão
-                Pública do Estado do Ceará tem por objetivo indicar os
-                princípios, valores e normas que devem orientar os seus
-                servidores na conquista dos seus direitos e obrigações,
-                de modo a regular as relações entre a administração
-                pública estadual e a sociedade.</p>
+            <ul>
+                <li class="lista_gray wow fadeInLeft"><i class="fa-solid fa-circle circle_green"></i> Tratar uns aos
+                    outros com
+                    cortesia, respeito e consideração,
+                    independentemente de diferenças de gênero, raça, etnia, religião, orientação
+                    sexual, idade, deficiência ou qualquer outra característica pessoal.</li>
+                <li class="lista_gray wow fadeInLeft" data-wow-delay="0.3s"><i class="fa-solid fa-circle circle_green"></i> Denunciar qualquer
+                    caso de
+                    assédio moral, assédio sexual, bullying,
+                    discriminação ou preconceito que qualquer servidor/colaborador presencie ou
+                    do qual tenha conhecimento. A denúncia deve ser feita de forma confidencial,
+                    seguindo os canais estabelecidos pela instituição.</li>
+            </ul>
         </div>
-        <div>
-            <img class="background_img" width="28%" height="auto" src="imgs/Group 11.png" alt="">
+        <div  class="img16 wow fadeInUp" >
+            <img src="imgs/Group 3.png" height="400px" width="auto" alt="">
+        </div>
 
-        </div>
     </main>
 
     <div class="center">
-        <a href="pagina03.html">
-            <button type="button" class="button_white">
-                <i class="fa-solid fa-chevron-left icone_white"></i>Anterior
+        <a href="pagina15.html">
+            <button type="button" class="button">
+                <i class="fa-solid fa-chevron-left icone"></i>Anterior
             </button>
         </a>
-        <a href="pagina05.html">
-            <button type="button" class="button_white">
-                Próximo <i class="fa-solid fa-chevron-right icone icone_white"></i>
+        <a href="pagina17.html">
+            <button type="button" class="button">
+                Próximo <i class="fa-solid fa-chevron-right icone"></i>
             </button>
         </a>
     </div>
