--- a/pagina03.html
+++ b/pagina03.html
@@ -23,51 +23,50 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
-<body class="pagina02">
+<body class="background_green">
 
     <main class="main">
 
         <h1 class="margin_title wow zoomIn" data-wow-duration="1">
-            <p class="title_white"><strong class="title_white"> Cartilha de Ética <br>
+            <p class="title_white "><strong class="title_white"> Cartilha de Ética <br>
                     para Servidores EGPCE: </strong><br>
                 Construindo Relações Positivas!
             </p>
         </h1>
+        <div class="wrapper">
 
-        <div class="container text-center">
-            <div class="row">
-                <div class="col">
-                    <img class="background_img" src="imgs/Group 10.png" width="auto" height="500" alt="">
-                </div>
-                <div class="col">
-                    <p class="p_white wow fadeInLeft">Olá,<br>
-                        Começa aqui a nossa
-                        jornada pela ética no
-                        ambiente de trabalho.
-                        Vamos explorar
-                        juntos como manter
-                        relações respeitosas e
-                        responsáveis. Vamos
-                        começar!</p>
-                </div>
-            </div>
+            <img class="background_img" src="imgs/Group 10.png" width="auto" height="500" alt="">
+
+            <p class="p_white  wow fadeInLeft">Olá,<br>
+                Começa aqui a nossa
+                jornada pela ética no
+                ambiente de trabalho.
+                Vamos explorar
+                juntos como manter
+                relações respeitosas e
+                responsáveis. Vamos
+                começar!</p>
+
         </div>
 
-        <div class="button_fixed">
-            <div class="botoes">
-                <a href="pagina02.html">
-                    <button type="button" class="button_white ">
-                        <i class="fa-solid fa-chevron-left icone_white"></i>Anterior
-                    </button>
-                </a>
-                <a href="pagina04.html">
-                    <button type="button" class="button_white ">
-                        Próximo <i class="fa-solid fa-chevron-right icone icone_white"></i>
-                    </button>
-                </a>
-            </div>
-        </div>
+
+
     </main>
+
+
+    <div class="center">
+        <a href="pagina02.html">
+            <button type="button" class="button_white ">
+                <i class="fa-solid fa-chevron-left icone_white"></i>Anterior
+            </button>
+        </a>
+        <a href="pagina04.html">
+            <button type="button" class="button_white ">
+                Próximo <i class="fa-solid fa-chevron-right icone_white"></i>
+            </button>
+        </a>
+    </div>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
