--- a/pagina06.html
+++ b/pagina06.html
@@ -25,7 +25,7 @@
 
 <body>
 
-    <main>
+    <main class="main">
         <div class="container text-center">
             <div class="row wow zoomIn">
                 <div class="col">
@@ -69,19 +69,20 @@
 
         </div>
 
-        <div class="center">
-            <a href="pagina05.html">
-                <button type="button" class="button">
-                    <i class="fa-solid fa-chevron-left icone"></i>Anterior
-                </button>
-            </a>
-            <a href="pagina07.html">
-                <button type="button" class="button">
-                    Próximo <i class="fa-solid fa-chevron-right icone"></i>
-                </button>
-            </a>
-        </div>
     </main>
+
+    <div class="center">
+        <a href="pagina05.html">
+            <button type="button" class="button">
+                <i class="fa-solid fa-chevron-left icone"></i>Anterior
+            </button>
+        </a>
+        <a href="pagina07.html">
+            <button type="button" class="button">
+                Próximo <i class="fa-solid fa-chevron-right icone"></i>
+            </button>
+        </a>
+    </div>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
