--- a/pagina10.html
+++ b/pagina10.html
@@ -25,7 +25,7 @@
 
 <body>
 
-    <main>
+    <main class="main">
         <div class="container text-center">
             <div class="row wow zoomIn">
                 <div class="col">
@@ -71,20 +71,21 @@
 
         </div>
 
-        <div class="center">
-            <a href="pagina09.html">
-                <button type="button" class="button">
-                    <i class="fa-solid fa-chevron-left icone"></i>Anterior
-                </button>
-            </a>
-            <a href="pagina11.html">
-                <button type="button" class="button">
-                    Próximo <i class="fa-solid fa-chevron-right icone"></i>
-                </button>
-            </a>
-        </div>
+
     </main>
 
+    <div class="center">
+        <a href="pagina09.html">
+            <button type="button" class="button">
+                <i class="fa-solid fa-chevron-left icone"></i>Anterior
+            </button>
+        </a>
+        <a href="pagina11.html">
+            <button type="button" class="button">
+                Próximo <i class="fa-solid fa-chevron-right icone"></i>
+            </button>
+        </a>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
