--- a/pagina11.html
+++ b/pagina11.html
@@ -29,7 +29,7 @@
         new WOW().init();
     </script>
     <!-- COMEÇO DO CONTEÚDO -->
-    <main>
+    <main class="main">
         <div class="container text-center">
             <div class="row wow zoomIn">
                 <div class="col">
@@ -71,20 +71,20 @@
                 <img class="wow fadeInUp" src="imgs/Group 8.png" width="auto" height="600" alt="">
             </div>
         </div>
-
-        <div class="center">
-            <a href="pagina10.html">
-                <button type="button" class="button">
-                    <i class="fa-solid fa-chevron-left icone"></i>Anterior
-                </button>
-            </a>
-            <a href="pagina12.html">
-                <button type="button" class="button">
-                    Próximo <i class="fa-solid fa-chevron-right icone"></i>
-                </button>
-            </a>
-        </div>
     </main>
+
+    <div class="center">
+        <a href="pagina10.html">
+            <button type="button" class="button">
+                <i class="fa-solid fa-chevron-left icone"></i>Anterior
+            </button>
+        </a>
+        <a href="pagina12.html">
+            <button type="button" class="button">
+                Próximo <i class="fa-solid fa-chevron-right icone"></i>
+            </button>
+        </a>
+    </div>
 
     <!-- FIM DO CONTEUDO -->
 
