--- a/pagina14.html
+++ b/pagina14.html
@@ -31,8 +31,8 @@
             <div class="container text-center">
                 <div class="row wow zoomIn">
                     <div class="col">
-                        <p class="title_white objetivos"><strong class="title_white"
-                                data-wow-duration="1">Objetivo</strong><br>
+                        <p class="title_white objetivos"><strong class="title_white" data-wow-duration="1">A EGPCE NÃO É <br>
+                            LUGAR DE...</strong><br>
                         </p>
                     </div>
                     <div class="col">
@@ -43,29 +43,53 @@
             </div>
         </h1>
 
-        <div>
-            <p class="paragrafo wow slideInLeft" data-wow-delay="1">O Código de Ética e Disciplina da Escola de Gestão
-                Pública do Estado do Ceará tem por objetivo indicar os
-                princípios, valores e normas que devem orientar os seus
-                servidores na conquista dos seus direitos e obrigações,
-                de modo a regular as relações entre a administração
-                pública estadual e a sociedade.</p>
-        </div>
-        <div>
-            <img class="background_img" width="28%" height="auto" src="imgs/Group 11.png" alt="">
+        <div class="wrapper">
+            <div>
+                <ul>
+                    <li class="lista wow fadeInLeft" data-wow-delay="0.1s">
+                        <i class="fa-solid fa-circle circle_orange"></i>Evitar manifestações de preconceitos
+                        relacionados à origem, raça, religião,
+                        classe social, sexo, deficiência física
+                        ou intelectual ou ainda quaisquer
+                        outras formas de discriminação.
+                    </li>
+                    <li class="lista wow fadeInLeft" data-wow-delay="0.2s">
+                        <i class="fa-solid fa-circle  circle_orange"></i>Manter a disciplina e respeito no trato
+                        com as pessoas tanto no exercício de
+                        atividade interna, quanto externa à
+                        instituição.
+                    </li>
+                </ul>
 
+            </div>
+            <div>
+                <ul>
+                    <li class="lista wow fadeInLeft" data-wow-delay="0.4s">
+                        <i class="fa-solid fa-circle circle_orange"></i>Evitar manifestações de preconceitos
+                        relacionados à origem, raça, religião,
+                        classe social, sexo, deficiência física
+                        ou intelectual ou ainda quaisquer
+                        outras formas de discriminação.
+                    </li>
+
+                </ul>
+            </div>
+        </div>
+        <div class="img14">
+            <img class="wow fadeInUp"  src="imgs/Group 5.png" height="400" width="auto" alt="">
         </div>
     </main>
 
+
     <div class="center">
-        <a href="pagina03.html">
+        <a href="pagina13.html">
             <button type="button" class="button_white">
                 <i class="fa-solid fa-chevron-left icone_white"></i>Anterior
             </button>
         </a>
-        <a href="pagina05.html">
+        <a href="pagina15.html">
             <button type="button" class="button_white">
-                Próximo <i class="fa-solid fa-chevron-right icone icone_white"></i>
+                Próximo <i class="fa-solid fa-chevron-right icone_white"></i>
             </button>
         </a>
     </div>
