--- a/pagina18.html
+++ b/pagina18.html
@@ -23,7 +23,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
-<body class="background_green">
+<body class="background_orange">
 
     <main class="main">
 
@@ -31,41 +31,48 @@
             <div class="container text-center">
                 <div class="row wow zoomIn">
                     <div class="col">
-                        <p class="title_white objetivos"><strong class="title_white"
-                                data-wow-duration="1">Objetivo</strong><br>
+                        <p class="title_white title_white_orange">LEMBRE-SE
                         </p>
                     </div>
                     <div class="col">
                         <img class="logo" src="imgs/logoEGP1.png" alt="">
                     </div>
-
                 </div>
             </div>
         </h1>
 
         <div>
-            <p class="paragrafo wow slideInLeft" data-wow-delay="1">O Código de Ética e Disciplina da Escola de Gestão
-                Pública do Estado do Ceará tem por objetivo indicar os
-                princípios, valores e normas que devem orientar os seus
-                servidores na conquista dos seus direitos e obrigações,
-                de modo a regular as relações entre a administração
-                pública estadual e a sociedade.</p>
+            <ul>
+                <li class="lista wow fadeInLeft"><i class="fa-solid fa-circle circle_green"></i>Os comportamentos
+                    que não se adequarem com os valores e
+                    princípios do nosso Código serão apurados, podendo resultar
+                    em advertência ou exoneração nos termos do Código de Ética da
+                    Administração Pública Estadual.</li>
+                <li class="lista wow fadeInLeft" data-wow-delay="0.3s"><i
+                        class="fa-solid fa-circle circle_green"></i>Os comportamentos que possam configurar violação a este Código
+                        devem ser inseridos nos registros sobre a conduta ética do servidor,
+                        com o objetivo de instruir e fundamentar procedimentos próprios
+                        para promoções ou elogios formais.</li>
+                <li class="lista wow fadeInLeft" data-wow-delay="0.3s"><i
+                        class="fa-solid fa-circle circle_green"></i>Ter sempre o Código de Ética da instituição, assim, em caso de
+                        dúvidas, a consulta será feita em instantes, com orientações
+                        detalhadas e específicas. Suas escolhas diárias têm um impacto
+                        profundo. Juntos, construímos uma cultura ética na Escola de
+                        Gestão Pública do Estado do Ceará. </li>
+            </ul>
         </div>
-        <div>
-            <img class="background_img" width="28%" height="auto" src="imgs/Group 11.png" alt="">
 
-        </div>
     </main>
 
     <div class="center">
-        <a href="pagina03.html">
+        <a href="pagina17.html">
             <button type="button" class="button_white">
                 <i class="fa-solid fa-chevron-left icone_white"></i>Anterior
             </button>
         </a>
-        <a href="pagina05.html">
+        <a href="pagina19.html">
             <button type="button" class="button_white">
-                Próximo <i class="fa-solid fa-chevron-right icone icone_white"></i>
+                Próximo <i class="fa-solid fa-chevron-right icone_white"></i>
             </button>
         </a>
     </div>
