--- a/pagina20.html
+++ b/pagina20.html
@@ -25,35 +25,23 @@
 
 <body>
 
-    <main class="main">
-        <div class="mid center">
-            <img class="logo_egp" src="imgs/logoEGP2.png" alt="">
-            <img class="logo_seplag" src="imgs/image_2logoseplag-removebg-preview.png" alt="">
-        </div>
+    <main>
+        
         <div class="center">
-            <img src="imgs/Group 17.png" width="1000" height="auto" alt="">
-        </div>
-        <div>
-            <h1 class="title center">Questão de Ética</h1>
-            <h2 class="description center">principais pontos do código de ética da EGPCE</h2>
+            <a href="pagina19.html">
+                <button type="button" class="button">
+                    <i class="fa-solid fa-chevron-left icone"></i>Anterior
+                </button>
+            </a>
         </div>
     </main>
 
-    <div class="center">
-        <a href="pagina02.html">
-            <button type="button" class="button">
-                Próximo <i class="fa-solid fa-chevron-right icone"></i>
-            </button>
-        </a>
-    </div>
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
-    <script>
-        new WOW().init();
-    </script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+crossorigin="anonymous"></script>
+<script>
+new WOW().init();
+</script>
 </body>
 
 </html>
