falta fazer o botao de fazer download e o responsivo

--- a/pagina03.html
+++ b/pagina03.html
@@ -35,7 +35,7 @@
         </h1>
         <div class="wrapper">
 
-            <img class="background_img" src="imgs/Group 10.png" width="auto" height="500" alt="">
+            <img class="background_img wow fadeInUp" src="imgs/Group 10.png" width="auto" height="500" alt="">
 
             <p class="p_white  wow fadeInLeft">Olá,<br>
                 Começa aqui a nossa
