--- a/pagina04.html
+++ b/pagina04.html
@@ -31,7 +31,7 @@
             <div class="container text-center">
                 <div class="row wow zoomIn">
                     <div class="col">
-                        <p class="title_white objetivos"><strong class="title_white"
+                        <p class="title_white objetivos"><strong class="title_white "
                                 data-wow-duration="1">Objetivo</strong><br>
                         </p>
                     </div>
@@ -52,7 +52,7 @@
                 pública estadual e a sociedade.</p>
         </div>
         <div>
-            <img class="background_img" width="28%" height="auto" src="imgs/Group 11.png" alt="">
+            <img class="background_img wow fadeInUp" width="28%" height="auto" src="imgs/Group 11.png" alt="">
 
         </div>
     </main>
