--- a/pagina12.html
+++ b/pagina12.html
@@ -48,7 +48,9 @@
             de trabalho.
         </p>
 
-        <img class="wow fadeInUp" src="imgs/Group 7.png" width="100%" height="auto" alt="">
+        <div class="center">
+            <img class="wow fadeInUp" src="imgs/Group 7.png" width="auto" height="500" alt="">
+        </div>
     </main>
     <div class="center">
         <a href="pagina11.html">
