--- a/pagina17.html
+++ b/pagina17.html
@@ -43,7 +43,7 @@
         </h1>
 
         <div class="paragrafo17">
-            <p class="p_white">A Escola de Gestão Pública
+            <p class="p_white wow fadeInLeft">A Escola de Gestão Pública
                 do Estado do Ceará deve
                 garantir a todos os seus
                 servidores uma formação
