--- a/pagina20.html
+++ b/pagina20.html
@@ -25,23 +25,81 @@
 
 <body>
 
-    <main>
-        
-        <div class="center">
-            <a href="pagina19.html">
-                <button type="button" class="button">
-                    <i class="fa-solid fa-chevron-left icone"></i>Anterior
-                </button>
-            </a>
+    <main class="main ">
+
+        <div class="container text-center">
+            <div class="row">
+                <div class="col">
+
+                    <h1 class="title center fw-bold fs-1 wow zoomIn">OUVIDORIA</h1>
+
+                    <div class="wow fadeIn" data-wow-delay="0.1s">
+                        <div class="center">
+                            <h1 class="titulo_orange">FORMAS DE ACESSO</h1>
+                        </div>
+                        <hr class="line_orange">
+                    </div>
+
+                    <h2 class="txt_orange wow fadeIn" data-wow-delay="0.2s">Acessando pelo endereço eletrônico:</h2>
+                    <p class="txt20 wow fadeIn" data-wow-delay="0.3s">
+                        <strong>
+                            <a href="https://www.egp.ce.gov.br/ouvidoria/">https://www.egp.ce.gov.br/ouvidoria/</a>
+                        </strong>
+                    </p>
+
+                    <p class="txt20 wow fadeIn" data-wow-delay="0.4s">Pelo e-mail:<strong><a
+                                href="">ouvidoria@egp.ce.gov.br
+                            </a></strong></p>
+
+                    <p class="txt20 wow fadeIn" data-wow-delay="0.5s">Pelo telefone: (85) 3101.3844</p>
+
+
+
+                    <h2 class="txt_orange wow fadeIn" data-wow-delay="0.6s">Central de Atendimento Telefônico da
+                        Ouvidoria Geral do Estado</h2>
+
+                    <p class="txt20 wow fadeIn" data-wow-delay="0.7s">Telefone: 155 (ligação gratuita)</p>
+                    <p class="txt20 wow fadeIn" data-wow-delay="0.8s">E-mail:<strong><a
+                                href="">ouvidoria.geral@cge.ce.gov.br</a></strong></p>
+
+                    <h2 class="txt_orange wow fadeIn" data-wow-delay="0.9s">Sistema de Ouvidoria - CT</h2>
+
+                    <p class="txt20 wow fadeIn" data-wow-delay="0.9s">No endereço eletrônico <strong><a
+                                href="https://cearatransparente.ce.gov.br">www.ouvidoria.ce.gov.br</a></strong>, o
+                        cidadão pode <br>
+                        acessar o Sistema de Ouvidoria - SOU para registrar sua manifestação.</p>
+
+                    <h2 class="txt_orange wow fadeIn" data-wow-delay="0.9s">Presencialmente</h2>
+
+                    <p class="txt20 wow fadeIn" data-wow-delay="0.9s">Av. General Afonso Albuquerque Lima, s/n -
+                        Cambeba, Fortaleza, Ce. - Cep:
+                        60.822-325</p>
+
+                    <div class="mid center wow fadeIn m-3" data-wow-delay="0.12s">
+                        <img class="logo_egp" src="imgs/logoEGP2.png" alt="">
+                        <img class="logo_seplag" src="imgs/image_2logoseplag-removebg-preview.png" alt="">
+                    </div>
+
+                </div>
+            </div>
         </div>
+
     </main>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-crossorigin="anonymous"></script>
-<script>
-new WOW().init();
-</script>
+    <div class="center">
+        <a href="pagina19.html">
+            <button type="button" class="button">
+                <i class="fa-solid fa-chevron-left icone"></i>Anterior
+            </button>
+        </a>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
+    <script>
+        new WOW().init();
+    </script>
 </body>
 
 </html>
