falta apenas organizar css

--- a/pagina03.html
+++ b/pagina03.html
@@ -37,6 +37,7 @@
 
             <img class="background_img wow fadeInUp" src="imgs/Group 10.png" width="auto" height="500" alt="">
 
+            <div class="responsive_center">
             <p class="p_white  wow fadeInLeft">Olá,<br>
                 Começa aqui a nossa
                 jornada pela ética no
@@ -46,7 +47,7 @@
                 relações respeitosas e
                 responsáveis. Vamos
                 começar!</p>
-
+            </div>
         </div>
 
 
