--- a/pagina04.html
+++ b/pagina04.html
@@ -36,7 +36,7 @@
                         </p>
                     </div>
                     <div class="col">
-                        <img class="logo" src="imgs/logoEGP1.png" alt="">
+                        <img class="logo logo04" src="imgs/logoEGP1.png" alt="">
                     </div>
 
                 </div>
