--- a/pagina12.html
+++ b/pagina12.html
@@ -49,7 +49,7 @@
         </p>
 
         <div class="center">
-            <img class="wow fadeInUp" src="imgs/Group 7.png" width="auto" height="500" alt="">
+            <img class="wow fadeInUp img12" src="imgs/Group 7.png" width="auto" height="500" alt="">
         </div>
     </main>
     <div class="center">
