--- a/pagina14.html
+++ b/pagina14.html
@@ -75,8 +75,8 @@
                 </ul>
             </div>
         </div>
-        <div class="img14">
-            <img class="wow fadeInUp"  src="imgs/Group 5.png" height="400" width="auto" alt="">
+        <div class="img14 ">
+            <img class="wow fadeInUp img12"  src="imgs/Group 5.png" height="400" width="auto" alt="">
         </div>
     </main>
 
