--- a/pagina16.html
+++ b/pagina16.html
@@ -54,7 +54,7 @@
             </ul>
         </div>
         <div  class="img16 wow fadeInUp" >
-            <img src="imgs/Group 3.png" height="400px" width="auto" alt="">
+            <img class="img12" src="imgs/Group 3.png" height="400px" width="auto" alt="">
         </div>
 
     </main>
