--- a/pagina17.html
+++ b/pagina17.html
@@ -54,7 +54,7 @@
         </div>
 
         <div  class="img14 wow fadeInUp" >
-            <img src="imgs/Group 2.png" height="400px" width="auto" alt="">
+            <img class="img12" src="imgs/Group 2.png" height="400px" width="auto" alt="">
         </div>
 
     </main>
