--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <img class="logo_seplag" src="imgs/image_2logoseplag-removebg-preview.png" alt="">
         </div>
         <div class="center">
-            <img src="imgs/Group 17.png" width="1000" height="auto" alt="">
+            <img class="img_index" src="imgs/Group 17.png" width="1000" height="auto" alt="">
         </div>
         <div>
             <h1 class="title center">Questão de Ética</h1>
