--- a/pagina13.html
+++ b/pagina13.html
@@ -64,7 +64,7 @@
                 </ul>
             </div>
             <div>
-                <img class="wow fadeInUp" src="imgs/Group 6.png" height="500" width="auto" alt="">
+                <img class="wow fadeInUp img12" src="imgs/Group 6.png" height="500" width="auto" alt="">
             </div>
         </div>
 
